[project]
name = "jax-cudss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax>=0.9.2",
]

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]>=0.9.2",
    "nvidia-cudss-cu12>=0.7.1.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
]
